[project]
name = "stablediffusion-dpmpp_2m_alt-sampler"
description = ""
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/SLAPaper/StableDiffusion-dpmpp_2m_alt-Sampler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "StableDiffusion-dpmpp_2m_alt-Sampler"
Icon = ""
