[project]
name = "stablediffusion-dpmpp_2m_alt-sampler"
description = "DPM++ 2M alt Sampler for ComfyUI (And WebUI) and Align Your Steps Scheduler"
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/SLAPaper/StableDiffusion-dpmpp_2m_alt-Sampler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "slapaper"
DisplayName = "StableDiffusion-dpmpp_2m_alt-Sampler"
Icon = ""
